// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component sanity matches default snapshot 1`] = `
.c0 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 {
  box-sizing: border-box;
}

.c3 {
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c1:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2 c3"
    color="copyColor"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  />
</label>
`;

exports[`Field component sanity matches themed snapshot 1`] = `
.c1 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  box-sizing: border-box;
}

.c4 {
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
}

.c3 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <label
    class="c1"
    display="inline-flex"
  >
    <div
      class="c2 c3 c4"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    />
  </label>
</div>
`;
